--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 	},
 	"dependencies": {
 		"@hookform/resolvers": "^5.1.1",
+		"@prisma/client": "^6.9.0",
 		"@radix-ui/react-dialog": "^1.1.14",
 		"@radix-ui/react-label": "^2.1.7",
 		"@radix-ui/react-slot": "^1.2.3",
@@ -35,14 +36,15 @@
 	"devDependencies": {
 		"@eslint/eslintrc": "^3",
 		"@tailwindcss/postcss": "^4",
-		"@types/node": "^20",
+		"@types/node": "^20.19.0",
 		"@types/react": "^19",
 		"@types/react-dom": "^19",
 		"eslint": "^9",
 		"eslint-config-next": "15.3.3",
 		"prisma": "^6.9.0",
 		"tailwindcss": "^4",
+		"ts-node": "^10.9.2",
 		"tw-animate-css": "^1.3.4",
-		"typescript": "^5"
+		"typescript": "^5.8.3"
 	}
 }
