--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
 		"react-hook-form": "^7.57.0",
+		"react-use": "^17.6.0",
 		"tailwind-merge": "^3.3.0",
 		"vaul": "^1.1.2",
 		"zod": "^3.25.56",
